# pipelab

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .mise.toml  .npmrc  .yarnrc.yml  ARCHITECTURE.md  CHANGELOG.md  FAQ.md  GEMINI.md  LICENSE  LICENSE.md  README.md  TODO  TODO_MONOREPO.md  components.d.ts  crowdin.yml  declaration.d.ts  e2e_output.txt  electron-builder.yml  eslint.config.mjs  forge.config.ts  forge.env.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratch.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vite.base.config.ts  vite.main.config.mts  vite.preload.config.mts  vite.renderer.config.mts  vitest.config.mts  vitest.config.ts
.changeset/: big-taxis-lie.md  breezy-zebras-bathe.md  clear-lions-relax.md  config.json  crisp-zebras-hope.md  cuddly-insects-flow.md  curly-comics-begin.md  curly-planets-move.md  curvy-nails-sell.md  cute-fans-win.md  cyan-brooms-share.md  dull-states-smoke.md  eager-adults-rest.md  eighty-poets-sell.md  every-cars-speak.md  fancy-emus-tell.md  fifty-shoes-fly.md  fine-hornets-enter.md  floppy-cameras-listen.md  floppy-icons-study.md  funky-ears-open.md  giant-candles-add.md  humble-moons-grow.md  khaki-guests-shake.md  lemon-worms-pump.md  light-lemons-call.md  lucky-sheep-wave.md  lucky-socks-hide.md  modern-masks-yawn.md  nervous-fireants-end.md  orange-pans-arrive.md  orange-peaches-thank.md  pre.json  purple-rice-send.md  red-olives-write.md  rich-bears-run.md  ripe-apes-like.md  ripe-planes-dream.md  serious-rice-act.md  tall-tools-remain.md  (+9 more)
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: dependabot.yml
apps/cli/assets/tauri/template/app/src-tauri/: Cargo.toml  tauri.conf.json
assets/tauri/template/app/src-tauri/: Cargo.toml  tauri.conf.json
assets/tauri/template/app/src-tauri/capabilities/: default.json
assets/tauri/template/app/src-tauri/src/: lib copy.rs  lib.rs
conductor/: fix-cli-build-and-e2e.md  fix-cyclic-dependencies.md
docs/: auth.drawio  expression.md
scripts/: build-cli.mjs  delete_tags.sh  detect-changes.ts  headless-electron-tester.mts  network-interceptor.mjs  publish-app.mjs  publish-ui.mjs  rename-assets.mjs  tsx-assets-loader.mjs  upload-windows.sh
src/: auto-imports.d.ts  constants.ts  global.d.ts  (+4 more)
(+808 files in other folders)
