[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.3"

tokio = "1.42.0"
tokio-tungstenite = "0.24.0"

futures-util = "0.3.31"
futures = "0.3.31"

tauri-plugin-devtools = "2.0.0"

wgpu = "0.19"
winit = "0.30.5"
env_logger = "0.9"
log = "0.4"
pollster = "0.4.0"
raw-window-handle = "0.5.2"
steamworks = "0.11.0"
tauri-plugin-fs = "2"
