[package]
name = "pipelab"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0 # Optimize for size

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-cli = "2.4.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# steamworks = "0.11.0"
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
anyhow = "1.0"
dirs = "5.0"

tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-localhost = "2"
